# fontdestination-example-plugin

./: .gitignore  AGENTS.md  README.md  counterpunch-plugin.json  pyproject.toml
.github/workflows/: pages.yml  release.yml
site/: app.js  counterpunch-font-destination.js  index.html  styles.css
src/binaryfontconsumer_example_plugin/: plugin.py
src/binaryfontconsumer_example_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fontdestination_example_plugin/: __init__.py  plugin.py
tests/: test_plugin.py
